# pipx-installer

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/: install_pipx.py
src/pipx_installer/: __init__.py
