[project]
requires-python = ">=3.8"

[tool.poetry]
name = "pipx-installer"
version = "1.0.0"
description = "A script to install pipx into its own virtual environment in just one line."
authors = ["Björn Reetz <bjoern.reetz@dwd.de>"]
readme = "README.md"
packages = [{include = "*.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
install-pipx = "install_pipx:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
# pythonpath = ["."]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E4", "E7", "E9", "W6",
    # mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-boolean-trap
    "FBT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-errmsg
    "EM",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # tryceratops
    "TRY",
    # perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]

[tool.ruff.per-file-ignores]
"**/test_*.py" = ["S101"]
